finished hero section

--- a/index.html
+++ b/index.html
@@ -4,30 +4,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <title>УПС 2</title>
+    <title>УПС 2 Мобилна апликација</title>
 </head>
 <body>
     <div class="hero-section">
         <div class="main-container">
-            <h1 class="title">УПС <span>2</span></h1>
-            <h1 class="description">Наследник на првата “УПС закони” апликација наменета за униформирани полициски службеници и спроведувачи на законот.
-                 Ова е прва верзија на УПС 2  со основни функционалности. Во план се нови надградувања. </h1>
+                <h1 class="main-title">УПС <span>2</span></h1>
+            </div>
+            <h1 class="description">Наследник на првата “УПС закони” апликација наменета за униформирани полициски службеници и спроведувачи на законот. УПС 2 е прва верзија со основни функционалности. Во план се нови надградувања. </h1>
         </div>
 
         <div class="features-container">
-            <div class="feature1">Брза скрол функција во пдф документот</div>
-            <div class="feature2">Не е потребна интернет конекција</div>
-            <div class="feature3">Светла и темна тема</div>
+            <div class="feature1">30+ пречистени текстови</div>
+            <div class="feature2">Комплетен офлајн мод</div>
+            <div class="feature3">Директна навигација до членот</div>
         </div>
 
+        <div class="downloads">
+            <h1 class="downloads-number">1000<span>+</span></h1>
+            <p class="police">полициски службеници ја користат УПС 1 апликацијата</p>
+        </div>
+
+
         <div class="screenshots-container">
-            <div class="dashboard">
                 <img class="dashboard-light" src="media/dashboard_ups_light.png" alt="dashboard_ups_light">
-                <img class="dashboard-dark" src="media/dashboard_ups.png" alt="dashboard_ups">
-            </div>
             <img class="laws" src="media/laws_ups_light.png" alt="laws_ups_light">
             <img class="law" src="media/law_light_ups.png" alt="dashboard_ups_light">
         </div>
+
+        <div class="main-feature-description">
+            <h1 class="main-feature-title">Директна навигација до членот од законот</h1>
+        </div>
+
+        <div class="main-feature-container">
+            <img class="laws" src="media/crimes_ups.png" alt="crimes_ups">
+            <img class="laws" src="media/recurring_crimes_ups.png" alt="recurring_crimes_ups">
+        </div>
+
+        <div class="playstore-section">
+            <h1 class="playstore-section-title">Превземи ја апликацијата</h1>
+            <a href="#"><img src="media/playstore logo.png" alt="playstore"></a>
+        </div>
+        
     </div>
+    <footer>
+        <h3>boryans.co@gmail.com</h3>
+    </footer>
 </body>
 </html>
