--- a/index.html
+++ b/index.html
@@ -3,52 +3,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@100..900&display=swap" rel="stylesheet">
+
     <title>УПС 2 Мобилна апликација</title>
 </head>
 <body>
     <div class="hero-section">
         <div class="main-container">
-                <h1 class="main-title">УПС <span>2</span></h1>
+                <h1 class="main-title">Сите закони на <span>едно</span> место</h1>
             </div>
-            <h1 class="description">Наследник на првата “УПС закони” апликација наменета за униформирани полициски службеници и спроведувачи на законот. УПС 2 е прва верзија со основни функционалности. Во план се нови надградувања. </h1>
-        </div>
-
-        <div class="features-container">
-            <div class="feature1">30+ пречистени текстови</div>
-            <div class="feature2">Комплетен офлајн мод</div>
-            <div class="feature3">Директна навигација до членот</div>
-        </div>
-
-        <div class="downloads">
-            <h1 class="downloads-number">1000<span>+</span></h1>
-            <p class="police">полициски службеници ја користат УПС 1 апликацијата</p>
-        </div>
-
-
-        <div class="screenshots-container">
-                <img class="dashboard-light" src="media/dashboard_ups_light.png" alt="dashboard_ups_light">
-            <img class="laws" src="media/laws_ups_light.png" alt="laws_ups_light">
-            <img class="law" src="media/law_light_ups.png" alt="dashboard_ups_light">
-        </div>
-
-        <div class="main-feature-description">
-            <h1 class="main-feature-title">Директна навигација до членот од законот</h1>
-        </div>
-
-        <div class="main-feature-container">
-            <img class="laws" src="media/crimes_ups.png" alt="crimes_ups">
-            <img class="laws" src="media/recurring_crimes_ups.png" alt="recurring_crimes_ups">
-        </div>
+            <h1 class="description">Бесплатна Андроид апликација наменета за полициски службеници. <br/>Заштеди време при изготвување на службен материјал</h1>
+            <br>
+            <div class="screenshots-container">
+                <img class="dashboard-light" src="media/image1.png" alt="dashboard_ups_light">
+                <img class="laws" src="media/image2.png" alt="laws_ups_light">
+             </div>
+            <br>
+            <div class="downloads">
+                <h1 class="downloads-number">1000+</h1>
+                <p class="police">полициски службеници ја користат старата верзија на „УПС закони“ апликацијата</p>
+            </div>
+            <br>
+            <div class="screenshots-container">
+            <img class="law" src="media/image3.png" alt="dashboard_ups_light">
+            <img class="drawer" src="media/image4.png" alt="drawer">
+            </div>
+        <br>
+        <h1 class="description">Оваа апликација наскоро ќе биде достапна на „Google Playstore“! <br/><br/> Регистрирајте се на нашата листа на чекање со вашата е-пошта и ќе ве известиме веднаш штом апликацијата биде готова.</h1>
 
         <div class="playstore-section">
-            <h1 class="playstore-section-title">Превземи ја апликацијата</h1>
-            <a href="#"><img src="media/playstore logo.png" alt="playstore"></a>
+            <button class="button">Додади ме на листа на чекање</button>
         </div>
         
     </div>
     <footer>
-        <h3>boryans.co@gmail.com</h3>
+        <h3>Креирано од Борис Јаневски :)</h3>
     </footer>
 </body>
 </html>
