--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="drawer" src="media/image4.png" alt="drawer">
             </div>
         <br>
-        <h1 class="description">Оваа апликација наскоро ќе биде достапна на „Google Playstore“! <br/><br/> Регистрирајте се на нашата листа на чекање со вашата е-пошта и ќе ве известиме веднаш штом апликацијата биде готова.</h1>
+        <h1 class="description">„УПС“ наскоро ќе биде достапна на „Google Playstore“! <br/><br/> Регистрирајте се на нашата листа на чекање со вашата е-пошта и ќе ве известиме веднаш штом апликацијата биде готова.</h1>
 
        
             <a href="https://forms.gle/cbfZx1GPwqSUkWcq5">
