--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div class="main-container">
                 <h1 class="main-title">Сите закони на <span>едно</span> место</h1>
             </div>
-            <h1 class="description">Бесплатна Андроид апликација наменета за полициски службеници. <br/>Заштеди време при изготвување на службен материјал</h1>
+            <h1 class="description">Бесплатна Андроид апликација наменета за полициски службеници.</h1>
+            <h1 class="description">Заштеди време при изготвување на службен материјал</h1>
             <br>
             <div class="screenshots-container">
                 <img class="dashboard-light" src="media/image1.png" alt="dashboard_ups_light">
