small text improvements

--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
                 <h1 class="downloads-number">1000+</h1>
                 <p class="police">полициски службеници ја користат старата верзија на „УПС закони“ апликацијата</p>
             </div>
-            <br>
             <div class="screenshots-container">
             <img class="law" src="media/image3.png" alt="dashboard_ups_light">
             <img class="drawer" src="media/image4.png" alt="drawer">
             </div>
         <br>
-        <h1 class="description">„УПС“ наскоро ќе биде достапна на „Google Playstore“! <br/><br/> Регистрирајте се на нашата листа на чекање со вашата е-пошта и ќе ве известиме веднаш штом апликацијата биде готова.</h1>
+        <h1 class="description">„УПС“ наскоро ќе биде достапна на „Google Playstore“! <br/><br/> Регистрирај се на нашата листа на чекање со твојот е-меил и добиј линк од „Google Playstore“ штом биде достапна.</h1>
 
        
             <a href="https://forms.gle/cbfZx1GPwqSUkWcq5">
