adding privacy policy

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
     <div class="hero-section">
+        <nav>
+            <a class="privacy-policy" href="privacy-policy.html">
+                <h2>Политика за приватност</h2>
+            </a>
+        </nav>
         <div class="main-container">
                 <h1 class="main-title">Сите закони на <span>едно</span> место</h1>
             </div>
