added privacy policy

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="hero-section">
         <nav>
             <a class="privacy-policy" href="privacy-policy.html">
-                <h2>Политика за приватност</h2>
+                <h3>Privacy policy</h3>
             </a>
         </nav>
         <div class="main-container">
