--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,9 +2,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="privacy-policy-styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@100..900&display=swap" rel="stylesheet">
     <title>Privacy policy</title>
 </head>
 <body>
-    
+    <h1>"UPS" privacy policy</h1>
+    <h3>Disclaimer:  "UPS" does not represent the Ministry of Internal Affairs or any government institution.</h3>
+    <br>
+    <h2>1. WHAT INFORMATION DO WE COLLECT?</h2>
+    <p><strong>Personal information you disclose to us</strong></p>
+    <p><strong>In Short:</strong> We collect personal information that you provide to us.</p>
+    <p>We collect personal information that you voluntarily provide to us when you express an interest in obtaining information about us or our products and Services, when you participate in activities on the Services, or otherwise when you contact us.</p>
+    <p><strong>Sensitive Information.</strong> We do not process sensitive information.</p>
+    <p><strong>Application Data.</strong> If you use our application(s), we also may collect the following information if you choose to provide us with access or permission:</p>
+    <ul>
+        <li><strong>Push Notifications.</strong> We may request to send you push notifications regarding your account or certain features of the application(s). If you wish to opt out from receiving these types of communications, you may turn them off in your device's settings.</li>
+    </ul>
+
+    <p>This information is primarily needed to maintain the security and operation of our application(s), for troubleshooting, and for our internal analytics and reporting purposes.</p>
+    <p>All personal information that you provide to us must be true, complete, and accurate, and you must notify us of any changes to such personal information.</p>
+
+    <h2>2. HOW DO WE PROCESS YOUR INFORMATION?</h2>
+    <p><strong>In Short:</strong> We process your information to provide, improve, and administer our Services, communicate with you, for security and fraud prevention, and to comply with law. We may also process your information for other purposes with your consent.</p>
+    <p>We process your personal information for a variety of reasons, depending on how you interact with our Services, including:</p>
+    <h2>3. WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</h2>
+    <p><strong>In Short:</strong> We may share information in specific situations described in this section and/or with the following third parties.</p>
+    <p>We may need to share your personal information in the following situations:</p>
+    <ul>
+        <li><strong>Business Transfers.</strong> We may share or transfer your information in connection with, or during negotiations of, any merger, sale of company assets, financing, or acquisition of all or a portion of our business to another company.</li>
+        <li><strong>Business Partners.</strong> We may share your information with our business partners to offer you certain products, services, or promotions.</li>
+    </ul>
+
+    <h2>4. HOW LONG DO WE KEEP YOUR INFORMATION?</h2>
+    <p><strong>In Short:</strong> We keep your information for as long as necessary to fulfill the purposes outlined in this Privacy Notice unless otherwise required by law.</p>
+    <p>We will only keep your personal information for as long as it is necessary for the purposes set out in this Privacy Notice, unless a longer retention period is required or permitted by law (such as tax, accounting, or other legal requirements).</p>
+    <p>When we have no ongoing legitimate business need to process your personal information, we will either delete or anonymize such information, or, if this is not possible (for example, because your personal information has been stored in backup archives), then we will securely store your personal information and isolate it from any further processing until deletion is possible.</p>
+    <h2>5. DO WE MAKE UPDATES TO THIS NOTICE?</h2>
+    <p><strong>In Short:</strong> Yes, we will update this notice as necessary to stay compliant with relevant laws.</p>
+
+    <p>We may update this Privacy Notice from time to time. The updated version will be indicated by an updated "Revised" date at the top of this Privacy Notice. If we make material changes to this Privacy Notice, we may notify you either by prominently posting a notice of such changes or by directly sending you a notification. We encourage you to review this Privacy Notice frequently to be informed of how we are protecting your information.</p>
+
+    <h2>6. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</h2>
+    <p>If you have questions or comments about this notice, you may email us at boryans.co@gmail.com or contact us by post at:</p>
+
+    <p>Boryanz</p>
+    <p>France Preshern 17</p>
+    <p>Skopje, Skopje 1000</p>
+    <p>Macedonia</p>
 </body>
 </html>
